Cards and overflow fixed

--- a/src/components/Community/Community.module.scss
+++ b/src/components/Community/Community.module.scss
@@ -37,6 +37,8 @@
 	overflow: hidden;
 	position: relative;
 	padding: 1.83rem;
+	max-width: 50rem;
+	height: 100%;
 	z-index: 5;
 
 	&:before {
@@ -88,17 +90,22 @@
 		background: linear-gradient(343.47deg, #424549 14.39%, #222222 89.15%);
 		border-radius: 46px;
 		padding: 4px;
+		height: 100%;
 	}
 
 	&__right {
 		display: flex;
 		flex-direction: column;
 		gap: 2.85rem;
+
+		@media (min-width: 1900px) {
+			gap: 2rem;
+		}
 	}
 
 	&__top {
 		display: flex;
-		align-items: center;
+		align-items: stretch;
 		gap: 1.5rem;
 	}
 
@@ -134,6 +141,10 @@
 	div {
 		margin-top: 17.67rem;
 		z-index: 5;
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
+		justify-content: space-between;
 	}
 
 	@media (max-width: $lg) {
@@ -169,12 +180,26 @@
 }
 
 .derivatives {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
 	p {
 		font-size: 1.6rem;
+
+		@media (min-width: 1900px) {
+			margin: 3.38rem 0 1.5rem;
+		}
 	}
 }
 
 .arena {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
 	p {
 		font-size: 1.6rem;
 	}
@@ -190,6 +215,13 @@
 		top: 0;
 		right: 0;
 		z-index: 1;
+	}
+
+	div {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 	}
 
 	@media (max-width: $ss) {
